# acdc-file

./: .gitignore  Cargo.toml  README.md  dist-workspace.toml
.github/workflows/: release.yml
src/: api.rs  main.rs  tui.rs
src/api/: docker_hub.rs  mod.rs  ranking.rs  repo_resolution.rs
src/tui/: app.rs  handlers.rs  mod.rs  tab.rs  theme.rs  ui.rs
