[package]
name = "acdc-file"
version = "0.1.0"
edition = "2024"
repository = "https://github.com/qwertzer12/acdc-file"

[dependencies]
clap = { version = "4.5.60", features = ["derive"] }
color-eyre = "0.6.5"
crossterm = "0.29.0"
ratatui = "0.30.0"
reqwest = { version = "0.13.2", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.49.0", features = ["full"] }

[[bin]]
name = "acdc"
path = "src/main.rs"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
